@@ -1,3 +1,5 @@
+* Dialer (ECCP): the "getcampaigninfo" request has been extended to return 
+  additional form attributes "name" and "description" in the <form> tag.
 * Dialer (ECCP): implement "filterbyagent" request
 * Dialer (ECCP): Added the following fields to response for "getagentstatus" 
   request: onhold pauseinfo remote_channel callinfo . 
